@@ -80,6 +80,9 @@ Bug Fixes
   may be placed in the wrong shard when the default compositeId router
   is used in conjunction with IDs containing "!". (yonik)
 
+* SOLR-4797: Shard splitting creates sub shards which have the wrong hash
+  range in cluster state. This happens when numShards is not a power of two
+  and router is compositeId. (shalin)
 
 
 Other Changes
